--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 body {
   background-color: #000000;
-  background-image: url(/assets/img/backg.png);
+  background-image: url(../img/backg.png);
   background-size: cover;
 }
 
